--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -26,7 +26,7 @@ float:left;
 .header .logo a {
 font-size:26px;
 color:#3f51b5;
-font-weight:normal;
+font-weight:bold;
 }
 .header .gnb {
 display:none;
